@@ -1,3 +1,10 @@
+2001-04-04  Ramiro Estrugo  <ramiro@eazel.com>
+
+	* rsvg.c:
+	* rsvg.h:
+	Include dependency modules to make this header more self
+	contained.  In this case gdk-pixbuf and stdio.
+	
 2001-04-03  Darin Adler  <darin@eazel.com>
 
 	* Makefile.am: Change order of libraries in LDADD
